# ansible-collection-kubernetes-spices

./: .editorconfig  .envrc  .gitignore  .local.vars.yml  .tool-versions  404.html  CHANGELOG.md  Makefile  README.md  Vagrantfile  ansible.cfg  cleanup.yml  dev-site.yml  examples  galaxy.yml  index.html  mkdocs.yml  package.json  pyproject.toml  requirements.txt  requirements.yml  site.yml  sitemap.xml  test.yml
.github/workflows/: dev-image.yaml  release-collection.yml  release.yml  site.yml  update-galaxy.yml
_/css/: site.css
ansible-kubernetes-spices/: common-variables.html  index.html  plugins.html  role-kubernetes-kind.html  role-kubernetes-spices.html  roles.html  running.html  setup.html
builder-ee/: README.adoc  bindep.txt  execution-environment.yml  requirements.txt  requirements.yml
docs/: index.md  role_argocd.md  role_gitea.md  role_istio.md  role_knative.md  role_tektoncd.md
documentation/: antora.yml
examples/: argocd.yml  cluster.yml  gitea.yml  gloo-edge-ce-defaults.yml  gloo-edge-ce.yml  gloo-edge-ee.yml  gloo-edge.yml  istio.yml  kind-destroy.yaml  kind-gloo-edge-ce.yml  kind-gloo-edge-ee.yml  kind-istio.yml  kind-tektoncd.yml  kind-vanilla-ipv6.yaml  kind-vanilla-port-offset.yaml  kind-vanilla.yaml  knative.yml  olm.yml  tektoncd.yml  tools.yml
includes/: minikube_cluster.md
plugins/filter/: offset_port.py  port_mapping.py  sort_versions.py  version_to_revision.py
role_argocd/: index.html
role_gitea/: index.html
role_istio/: index.html
role_knative/: index.html
role_tektoncd/: index.html
search/: search_index.json
(+152 files in other folders)
