[tool.poetry]
name = "kameshsampath.kubernetes_spices"
version = "0.0.1"
description = "Ansible Collections to spice your Kubernetes Cluster"
authors = ["Kamesh Sampath <kamesh.sampath@hotmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
openshift = "^0.12.0"
ansible-base = "^2.10.8"
boto3 = "^1.17.53"
kubernetes-validate = "^1.20.0"
ansible-builder = "^1.0.1"
docker = "^5.0.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.0.2"
pexpect = "^4.8.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.0.7"
yamllint = "^1.26.1"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
